@@ -1,3 +1,10 @@
+2018-01-06  Werner Lemberg  <wl@gnu.org>
+
+	Use new `FT_Done_Var_MM' function.
+
+	* src/ftdump.c (Print_MM_Axes), src/ftgrid.c (main), src/ftmulti.c
+	(main): Do it.
+
 2017-12-31  Werner Lemberg  <wl@gnu.org>
 
 	[ttdebug] Fix compiler warnings and run-time errors.
